--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -9,10 +9,10 @@
                         <img src="../img/deployment_tool_rs.jpg" alt="developed deployment tool">
                     </a>
                     <br>
-                    <p id="caption">Automatic deployment tool. Functions: upload files on an automation server;
-                        <br>Loading the wanted file on one application server and running shell scripts
-                        <br>to deploy and sync all the servers with the given parameters.
-                        <br>
+                    <p id="caption">Automatic deployment tool.
+                        <br/> Upload files, load them on the server and deploy the application with two buttons.
+                        <br/>
+                        <br/>
                         <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, Shell/Bash</span>
                     </p>
                 </div>
@@ -21,9 +21,10 @@
                         <img src="../img/portal_rs.png" alt="portal tool">
                     </a>
                     <br>
-                    <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
-
-                        <br>
+                    <p id="caption">The Portal.
+                        <br/>Aggregate and access on one single page all tools used by the team.
+                        <br/>
+                        <br/>
                         <span style="font-weight: 600">Technologies used: ReactJS, Gatsby, HTML5/CSS3</span>
                     </p>
                 </div>
@@ -32,11 +33,11 @@
                         <img src="../img/rest_api.png" alt="rest api app">
                     </a>
                     <br>
-                    <p id="caption">Complete RESTful API. Make all CRUD operations from/to a DB, or upload a bulk file. All documented/testable
-                        through Swagger.
-
-                        <br>
-                        <span style="font-weight: 600">Technologies used: NodeJS, Swagger, Postman, Docker, HTML5/CSS3. Test: Mocha/Chai </span>
+                    <p id="caption">Complete RESTful API.
+                        <br/> Make all CRUD operations from/to a DB, or upload a bulk file. All testable through Swagger.
+                        <br/>
+                        <br/>
+                        <span style="font-weight: 600">Technologies used: NodeJS, MongoDB, Redis, Swagger, Docker. Test: Mocha/Chai </span>
                     </p>
                 </div>
                 <div style="margin: auto; text-align: center" class="animated fadeInRight delay-1s">
@@ -44,9 +45,10 @@
                         <img src="../img/movie_tmdb_react.png" alt="rest api app">
                     </a>
                     <br>
-                    <p id="caption">Fetch data through an API and show the best rated movies/shows, and their details.
-
-                        <br>
+                    <p id="caption">Show the best
+                        <br/> Fetch data through an API and show the best rated movies/shows, and their details.
+                        <br/>
+                        <br/>
                         <span style="font-weight: 600">Technologies used: ReactJS, HTML5/CSS3, Test: Jest/Enzyme</span>
                     </p>
                 </div>
@@ -57,7 +59,8 @@
                     <br>
                     <p id="caption">Main website.
                         <br>Functions: login and sign-up; GUI to write and post on-line.
-                        <br>
+                        <br/>
+                        <br/>
                         <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, MongoDB</span>
                     </p>
                 </div>
