--- a/views/dev/portfolio/deploymentTool.ejs
+++ b/views/dev/portfolio/deploymentTool.ejs
@@ -55,10 +55,16 @@
                 <img src="../img/linux.svg" alt="Linux">
             </p>
         </div>
+        <div>
+            <p>Test</p>
+            <p>-</p>
+        </div>
 
     </section>
 
-    <a href="https://github.com/buaiscia/newPKI" target="__blank"><h3>Repository on Github</h3></a>
+    <a href="https://github.com/buaiscia/newPKI" target="__blank">
+        <h3>Repository on Github</h3>
+    </a>
 
 
     <% include ../../partials/footer %>
