--- a/views/dev/portfolio/movieDB.ejs
+++ b/views/dev/portfolio/movieDB.ejs
@@ -4,15 +4,33 @@
         Movie DB web application
     </h2>
     <p class="descPortfolio">
-        Fetch data through an API and show the best rated movies/shows, and their details.
-        <br/>
-        <br/> ...
+        Frontend application using The Movie Database API. Built with React.
+        <br/> Through a carousel of four types, it's possible to select each and read its details. The Search feature allows to
+        find shows by titles.
     </p>
+
+    <br/>
+    <br/>
+
+    <section class='links'>
+        <a href="https://shows-best-shows.netlify.com/" target="__blank">
+            <h3>Live Demo</h3>
+        </a>
+        <a href="https://github.com/buaiscia/movies_shows_react_v2" target="__blank">
+            <h3>Repository on Github</h3>
+        </a>
+    </section>
+
+    <br/>
+
     <div style="text-align: center">
-        <img class="gif" src="../img/portal_opt.gif"></img>
+        <img class="gif" src="../img/moviesShow.gif"></img>
     </div>
 
-    <h3>Skill set</h3>
+    <br/>
+    <br/>
+
+    <h3 style="font-size: 2.2rem;">Skill set</h3>
     <section class='skillsetport'>
         <div>
             <p>Frontend</p>
@@ -20,7 +38,6 @@
             <p>
                 <img src="../img/if_html5_294678.svg" alt="HTML5">
                 <img src="../img/if_css3_294692.svg" alt="CSS3">
-                <img src="../img/JS.png" alt="JS">
                 <img src="../img/react.jpg" alt="React">
 
             </p>
@@ -29,7 +46,7 @@
             <p>Backend</p>
             <p>TMDB</p>
             <p>
-                <img src="../img/nodejs.png" alt="NodeJS">
+                <img src="../img/tmdb.svg" alt="The Movie Database">
             </p>
         </div>
         <div>
@@ -38,18 +55,14 @@
         </div>
         <div>
             <p>Test</p>
-            <p>Jest</p>
-            <p>Enyzme</p>
+            <p>Jest - Enyzme</p>
             <p>
-                <img src="../img/nodejs.png" alt="NodeJS">
+                <img src="../img/jestt.png" alt="Jest">
             </p>
         </div>
 
     </section>
 
-    <a href="https://github.com/buaiscia/PortalTool" target="__blank">
-        <h3>Repository on Github</h3>
-    </a>
 
 
     <% include ../../partials/footer %>
