--- a/views/dev/portfolio/portal.ejs
+++ b/views/dev/portfolio/portal.ejs
@@ -39,9 +39,11 @@
         <div>
             <p>Storage</p>
             <p>-</p>
-
         </div>
-
+        <div>
+            <p>Test</p>
+            <p>-</p>
+        </div>
     </section>
 
     <a href="https://github.com/buaiscia/PortalTool" target="__blank">
