--- a/views/dev/portfolio/website.ejs
+++ b/views/dev/portfolio/website.ejs
@@ -5,11 +5,10 @@
     </h2>
     <p class="descPortfolio">
         Created in 2018 and constantly updated, the website is a partial show of my work working with vanillaJS with the support
-        of NodeJS and NPM. Using the EJS engine to integrate JS in HTML, it includes both a frontend and a backend. 
-        <br/> 
-        <br/> 
-        The site is static, however it is built with a backbone of NodeJS (with Express) for routing, auth, connection to DB, modelling, security; in the blog section the data is stored on mongoDB (which manages the users
-        and auth as well).
+        of NodeJS and NPM. Using the EJS engine to integrate JS in HTML, it includes both a frontend and a backend.
+        <br/>
+        <br/> The site is static, however it is built with a backbone of NodeJS (with Express) for routing, auth, connection to
+        DB, modelling, security; in the blog section the data is stored on mongoDB (which manages the users and auth as well).
     </p>
     <div style="text-align: center">
         <img class="gif" src="../img/alexbuaisciasite_opt.gif"></img>
@@ -25,7 +24,7 @@
                 <img src="../img/if_css3_294692.svg" alt="CSS3">
                 <img src="../img/JS.png" alt="JS">
                 <img src="../img/ejs.jpg" alt="EJS">
-                
+
             </p>
         </div>
         <div>
@@ -41,13 +40,18 @@
             <p>Storage</p>
             <p>MongoDB</p>
             <p>
-                <img  style="max-width: none;" src="../img/if_mongodb_1012822.svg" alt="MongoDB">
+                <img style="max-width: none;" src="../img/if_mongodb_1012822.svg" alt="MongoDB">
             </p>
         </div>
-
+        <div>
+            <p>Test</p>
+            <p>-</p>
+        </div>
     </section>
 
-    <a href="https://github.com/buaiscia/alexbuaiscia" target="__blank"><h3>Repository on Github</h3></a>
+    <a href="https://github.com/buaiscia/alexbuaiscia" target="__blank">
+        <h3>Repository on Github</h3>
+    </a>
 
 
     <% include ../../partials/footer %>
