added various css improvements

--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -146,6 +146,11 @@
                             <a style="text-decoration:none; color:inherit;" href="https://buaiscia.github.io/" target="__blank">
                                 Go to my Github page and blog</a>
                         </p>
+                        <p>
+                            <i class="fab fa-github-square"></i>
+                            <a style="text-decoration:none; color:inherit;" href="https://github.com/buaiscia/" target="__blank">
+                                Go to my Github repositories</a>
+                        </p>
 
                     </div>
                     <div class="formdiv">
