--- a/views/dev/portfolio/movieDB.ejs
+++ b/views/dev/portfolio/movieDB.ejs
@@ -30,7 +30,7 @@
     <br/>
     <br/>
 
-    <h3 style="font-size: 2.2rem;">Skill set</h3>
+    <h3 class="h3Skills">Skill set</h3>
     <section class='skillsetport'>
         <div>
             <p>Frontend</p>
