--- a/views/dev/portfolio/portal.ejs
+++ b/views/dev/portfolio/portal.ejs
@@ -14,7 +14,18 @@
         <img class="gif" src="../img/portal_opt.gif"></img>
     </div>
 
-    <h3>Skill set</h3>
+    <br>
+
+    <section style="display: block" class="links">
+        <a href="https://github.com/buaiscia/PortalTool" target="__blank">
+            <h3>Repository on Github</h3>
+        </a>
+    </section>
+
+    <br>
+    <br>
+
+    <h3 class="h3Skills">Skill set</h3>
     <section class='skillsetport'>
         <div>
             <p>Frontend</p>
@@ -22,14 +33,13 @@
             <p>
                 <img src="../img/if_html5_294678.svg" alt="HTML5">
                 <img src="../img/if_css3_294692.svg" alt="CSS3">
-                <img src="../img/JS.png" alt="JS">
                 <img src="../img/react.jpg" alt="React">
 
             </p>
         </div>
         <div>
             <p>Backend</p>
-            <p>Gatsby - Apache</p>
+            <p>NodeJS - Gatsby - Apache</p>
             <p>
                 <img src="../img/nodejs.png" alt="NodeJS">
                 <img src="../img/gatsbypng.png" alt="Gatsby">
@@ -46,9 +56,9 @@
         </div>
     </section>
 
-    <a href="https://github.com/buaiscia/PortalTool" target="__blank">
-        <h3>Repository on Github</h3>
-    </a>
+
+
+
 
 
     <% include ../../partials/footer %>
