--- a/views/dev/portfolio/restApi.ejs
+++ b/views/dev/portfolio/restApi.ejs
@@ -34,37 +34,37 @@
                 <td>one movie image of type (poster, background, else)</td>
             </tr>
             <tr>
-                <th scope="row">3</th>
+                <th scope="row">4</th>
                 <td>/movies</td>
                 <td>POST</td>
                 <td>new movie created</td>
             </tr>
             <tr>
-                <th scope="row">3</th>
+                <th scope="row">5</th>
                 <td>/movies/:id </td>
                 <td>PATCH</td>
                 <td>movie fields edited</td>
             </tr>
             <tr>
-                <th scope="row">3</th>
+                <th scope="row">6</th>
                 <td>/movies/:id </td>
                 <td>DELETE</td>
                 <td>movie deleted</td>
             </tr>
             <tr>
-                <th scope="row">3</th>
+                <th scope="row">7</th>
                 <td>/upload/</td>
                 <td>GET</td>
                 <td>go to upload page</td>
             </tr>
             <tr>
-                <th scope="row">3</th>
+                <th scope="row">8</th>
                 <td>/upload/ </td>
                 <td>POST</td>
                 <td>upload JSON collection file</td>
             </tr>
             <tr>
-                <th scope="row">3</th>
+                <th scope="row">9</th>
                 <td>/api-docs</td>
                 <td>GET</td>
                 <td>Go to Swagger documentation</td>
@@ -117,7 +117,7 @@
     <br/>
 
     <section class='links'>
-        <a href="https://restful-db-api.herokuapp.com/" target="__blank">
+        <a href="https://restful-db-api.herokuapp.com/api-docs" target="__blank">
             <h3>Live Demo</h3>
         </a>
         <a href="https://github.com/buaiscia/rest_api" target="__blank">
@@ -133,7 +133,7 @@
 
     <br/>
 
-    <h3 style="font-size: 2.2rem;">Skill set</h3>
+    <h3 class="h3Skills">Skill set</h3>
     <section class='skillsetport'>
         <div>
             <p>Frontend</p>
