--- a/views/dev/portfolio/website.ejs
+++ b/views/dev/portfolio/website.ejs
@@ -14,7 +14,18 @@
         <img class="gif" src="../img/alexbuaisciasite_opt.gif"></img>
     </div>
 
-    <h3>Skill set</h3>
+    <br>
+
+    <section style="display: block" class="links">
+        <a href="https://github.com/buaiscia/alexbuaiscia" target="__blank">
+            <h3>Repository on Github</h3>
+        </a>
+    </section>
+
+    <br>
+    <br>
+
+    <h3 class="h3Skills">Skill set</h3>
     <section class='skillsetport'>
         <div>
             <p>Frontend</p>
@@ -49,9 +60,7 @@
         </div>
     </section>
 
-    <a href="https://github.com/buaiscia/alexbuaiscia" target="__blank">
-        <h3>Repository on Github</h3>
-    </a>
+
 
 
     <% include ../../partials/footer %>
