--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -636,13 +636,17 @@ a:active {
 }
 
 .links h3::after {
-    content: "→";
+    /* content: "→"; */
+    content: "↣";
     color: rgb(228, 88, 101);
     position: relative;
     left: 20px;
     font-size: 30px;
 }
 
+.h3Skills {
+    font-size: 2.2rem;
+}
 
 /* .resizedImgPort {
     max-width: 80px; 
@@ -860,6 +864,15 @@ form > div {
     .toollist {
         margin: 0 2rem;
     }
+    .skillsetport {
+        display: block;
+    }
+    .links {
+        display: block;
+    }
+    .links h3 {
+        padding: 5% 0;
+    }
 }
 
 
@@ -913,3 +926,41 @@ form > div {
     }
 }
 
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+
+}
