--- a/views/dev/portfolio/deploymentTool.ejs
+++ b/views/dev/portfolio/deploymentTool.ejs
@@ -25,7 +25,18 @@
         <img class="gif" src="../img/pkitool_opt.gif"></img>
     </div>
 
-    <h3>Skill set</h3>
+    <br/>
+
+    <section style="display: block" class='links'>
+            <a href="https://github.com/buaiscia/newPKI" target="__blank">
+                <h3>Repository on Github</h3>
+            </a>
+        </section>
+    
+    <br/>
+    <br/>
+
+    <h3 class="h3Skills">Skill set</h3>
     <section class='skillsetport'>
         <div>
             <p>Frontend</p>
@@ -34,17 +45,14 @@
                 <img src="../img/if_html5_294678.svg" alt="HTML5">
                 <img src="../img/if_css3_294692.svg" alt="CSS3">
                 <img src="../img/JS.png" alt="JS">
-                <img src="../img/ejs.jpg" alt="EJS">
-
             </p>
         </div>
         <div>
             <p>Backend</p>
-            <p>NodeJS - Express - NPM - Apache</p>
+            <p>NodeJS - Express - Apache</p>
             <p>
                 <img src="../img/nodejs.png" alt="NodeJS">
                 <img class="resizedImgPort" src="../img/express.png" alt="NodeJS">
-                <img class="resizedImgPort" src="../img/npm.png" alt="NPM">
                 <img src="../img/apache.jfif" alt="Apache">
             </p>
         </div>
@@ -62,9 +70,7 @@
 
     </section>
 
-    <a href="https://github.com/buaiscia/newPKI" target="__blank">
-        <h3>Repository on Github</h3>
-    </a>
+    
 
 
     <% include ../../partials/footer %>
