--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js">
     <link href="http://cdn.phpoll.com/css/animate.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"
     />
@@ -33,10 +34,10 @@
         });
 
     </script>
-    <script src="js/wow.min.js"></script>
+    <!-- <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
-    </script>
+    </script> -->
 
 
 </head>
@@ -61,7 +62,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
 
-                    <ul style="margin: auto;" class="nav navbar-nav navbar-left">
+                    <ul style="margin: 0 25%;" class="nav navbar-nav navbar-left">
                         <!-- <li><a class="nav-item nav-link active" href="/">Home</a></li> -->
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
