--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -66,9 +66,12 @@
                 </h2>
                 <p class="aboutMain">
                     I'm an experienced application engineer working with APIs, DBs, webservers, 
-                    creating automation full-stack web apps using nodeJS / React to operate safe and easy deployments or to provide access to monitoring. 
+                    creating full-stack web applications focused on the MERN stack: NodeJS - ReactJS - MongoDB. 
                     <br/>
-                    I'm based in Brno, Czech Republic. I just love to learn technologies and to build new projects. </p>
+                    But I just love to learn technologies and to build new projects (big # of GH repos alert! <i style="color: red;"  class="fas fa-exclamation-triangle"></i>)
+                    <br/>
+                    I'm based in Brno, Czech Republic, and looking for web development opportunities here and abroad. 
+                </p>
                     <br/>
                 <div style="text-align:center">
                     <a class="btn btn-info" target="_blank" href="../docs/Alex_Buaiscia_CV.pdf">Download my CV</a>
@@ -88,7 +91,7 @@
                     <img src="../img/if_mongodb_1012822.svg" alt="MongoDB">
                     <i class="fas fa-database"></i>
                     <i class="fab fa-linux"></i>
-                    <i class="fab fa-php"></i>
+                    <i class="fab fa-docker"></i>
                 </section>
 
             </div>
